--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,24 @@
         android:layout_marginTop="32dp"
         android:text="PokeGuess" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/HomePokemonImageView"
+        android:layout_width="270dp"
+        android:layout_height="270dp"
+        android:layout_above="@+id/HomeButtonLayout"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="50dp"
+        android:background="@color/silver" />
+
+    <LinearLayout
+        android:id="@+id/HomeButtonLayout"
+        android:layout_width="220dp"
+        android:layout_height="270dp"
+        android:layout_above="@+id/bottomTextView"
+        android:layout_centerInParent="true"
+        android:layout_marginBottom="30dp"
         android:orientation="vertical">
+
 
         <Button
             android:id="@+id/classic_mode_button"
