added leaderboard UI

--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -36,18 +36,27 @@
         android:layout_marginTop="8dp"
         android:text="@string/leaderboard_description" />
 
-    <TableLayout
-        android:id="@+id/leaderboard_table"
-        style="@style/DefaultTextStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@id/leaderboard_description"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="16dp">
-        <TableRow
-            android:layout_height="match_parent"
-            android:background="@drawable/table_row_background">
-        </TableRow>
-    </TableLayout>
+        android:layout_marginTop="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp">
+
+        <TableLayout
+            android:id="@+id/leaderboard_table"
+            style="@style/DefaultTextStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal">
+            <TableRow
+                android:layout_height="match_parent"
+                android:layout_width="wrap_content"
+                android:background="@drawable/table_row_background">
+            </TableRow>
+        </TableLayout>
+    </ScrollView>
 
 </RelativeLayout>
