--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="silver">#c0c0c0</color>
     <color name="green">#008000</color>
     <color name="red">#FF004F</color>
+    <color name="yellow">#FFFF0F</color>
 
 
     <!-- Volcarona color palette -->
