--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,17 @@
         android:layout_centerHorizontal="true"
         android:src="@drawable/pokeguess_no_bg" />
 
+    <ImageButton
+        android:id="@+id/userButton"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_alignParentEnd="true"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:src="@drawable/ic_user_icon"
+        android:scaleType="fitCenter"/>
+
     <LinearLayout
         android:id="@+id/menuPageButtons"
         android:layout_width="wrap_content"
