--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,16 +13,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="25dp"
         android:text="PokeGuess" />
 
     <ImageView
         android:id="@+id/mainPageImage"
         android:layout_width="256dp"
         android:layout_height="256dp"
+        android:layout_marginTop="50dp"
         android:layout_below="@id/titleTextView"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/pokeguess_no_bg" />
+        android:layout_centerHorizontal="true" />
 
     <ImageButton
         android:id="@+id/userButton"
@@ -42,6 +42,7 @@
         android:layout_below="@id/mainPageImage"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
+        android:layout_marginTop="10dp"
         android:orientation="vertical">
 
         <Button
@@ -87,13 +88,13 @@
 
     <RelativeLayout
         android:id="@+id/menuPageStatus"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="70dp"
         android:layout_below="@id/menuPageButtons"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginTop="5dp"
         android:layout_marginBottom="8dp">
 
         <ImageButton
@@ -107,6 +108,7 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_below="@id/refreshButton"
             android:layout_marginTop="-16dp">
 
@@ -116,6 +118,7 @@
                 android:layout_height="12dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginRight="4dp"
+
                 android:layout_toStartOf="@id/serverStatusText"
                 android:background="@drawable/red_dot" />
 
