--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
+
     <!-- Base application theme. -->
     <style name="Base.Theme.PokeGuess" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.PokeGuess" parent="Base.Theme.PokeGuess" />
+    <style name="Theme.PokeGuess" parent="Base.Theme.PokeGuess">
+        <item name="android:statusBarColor">@color/blue_volc</item>
+    </style>
 
     <style name="DefaultTextStyle">
         <item name="android:textColor">@color/black</item>
