--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,19 +32,36 @@
             android:scaleType="fitCenter"
             android:src="@drawable/ic_user_icon" />
 
-        <ImageView
-            android:id="@+id/mainPageImage"
-            android:layout_width="216dp"
-            android:layout_height="216dp"
+        <LinearLayout
+            android:id="@+id/menuPageImage"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/titleTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/mainPageImage"
+                android:layout_width="216dp"
+                android:layout_height="216dp"
+                android:layout_below="@+id/menuPageStatus"
+                android:layout_centerHorizontal="true" />
+
+            <TextView
+                android:id="@+id/mainPageImageName"
+                style="@style/DefaultTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+        </LinearLayout>
+
 
         <LinearLayout
             android:id="@+id/menuPageButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/mainPageImage"
+            android:layout_below="@id/menuPageImage"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="16dp"
             android:orientation="vertical">
