--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -32,21 +31,35 @@
             android:scaleType="fitCenter"
             android:src="@drawable/ic_user_icon" />
 
-        <ImageView
-            android:id="@+id/mainPageImage"
-            android:layout_width="216dp"
-            android:layout_height="216dp"
+        <LinearLayout
+            android:id="@+id/menuPageImage"
+            android:layout_marginTop="30dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_below="@id/titleTextView"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp" />
+            android:orientation="vertical">
+
+            <ImageView
+                android:id="@+id/mainPageImage"
+                android:layout_width="216dp"
+                android:layout_height="216dp" />
+
+            <TextView
+                android:id="@+id/mainPageImageName"
+                style="@style/DefaultTextStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/menuPageButtons"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/mainPageImage"
+            android:layout_below="@id/menuPageImage"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:orientation="vertical">
 
             <Button
@@ -54,7 +67,6 @@
                 style="@style/SubtitleTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-
                 android:backgroundTint="@color/blue_volc"
                 android:text="@string/menu_page_classic_button"
                 android:textColor="@color/silver" />
@@ -108,8 +120,9 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
-            android:layout_marginEnd="16dp">
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp">
 
             <ImageButton
                 android:id="@+id/refreshButton"
@@ -133,15 +146,14 @@
                     android:layout_width="12dp"
                     android:layout_height="12dp"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginRight="8dp"
-                    android:layout_toStartOf="@id/serverStatusText"
+                    android:layout_marginEnd="8dp"
                     android:background="@drawable/red_dot" />
 
                 <TextView
                     android:id="@+id/serverStatusText"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="API status"
+                    android:text="@string/menu_page_api_status"
                     android:textColor="@color/black" />
             </LinearLayout>
 
@@ -151,9 +163,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
-                android:layout_below="@id/serverStatusTextLayout"
                 android:text="@string/menu_page_credits" />
         </RelativeLayout>
 
     </RelativeLayout>
+
 </ScrollView>
