--- a/app/src/main/res/layout/activity_leaderboard.xml
+++ b/app/src/main/res/layout/activity_leaderboard.xml
@@ -14,6 +14,16 @@
         android:background="@android:color/transparent"
         android:src="@drawable/ic_arrow_back" />
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/blue_volc"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/leaderboard_title"
         style="@style/TitleTextStyle"
