--- a/app/src/main/res/layout/fragment_classic.xml
+++ b/app/src/main/res/layout/fragment_classic.xml
@@ -4,6 +4,16 @@
     android:layout_height="match_parent"
     android:background="@color/silver">
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/blue_volc"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
+
     <TextView
         android:id="@+id/leaderboard_classic_description"
         style="@style/SubtitleTextStyle"
@@ -23,7 +33,7 @@
         android:layout_marginBottom="16dp">
 
         <TableLayout
-            android:id="@+id/leaderboard_table"
+            android:id="@+id/leaderboard_classic_table"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal">
