--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -110,6 +110,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue_volc"
+        android:textColor="@color/white_volc"
         android:text="Login" />
 
 
@@ -124,13 +125,24 @@
         android:layout_marginTop="16dp"
         android:visibility="gone" />
 
-    <!-- Connected as view -->
+    <!-- Classic mode score -->
+    <TextView
+        android:id="@+id/bestMasterTextView"
+        style="@style/DefaultTextStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/usernameTextView"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="16dp"
+        android:visibility="gone" />
+
+    <!-- Challenge mode score -->
     <TextView
         android:id="@+id/bestScoreTextView"
         style="@style/DefaultTextStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/usernameTextView"
+        android:layout_below="@id/bestMasterTextView"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:visibility="gone" />
@@ -146,6 +158,7 @@
         android:layout_marginTop="16dp"
         android:backgroundTint="@color/blue_volc"
         android:text="Logout"
+        android:textColor="@color/white_volc"
         android:visibility="gone" />
 
 </RelativeLayout>
