--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="gray_volc">#626262</color>
     <color name="white_volc">#e6e6e6</color>
     <color name="orange_volc">#de5c45</color>
-    <color name="sky_volc">#94cdd5</color>
+    <color name="sky_volc">#6b99aa</color>
     <color name="blue_volc">#487F86</color>
 
 </resources>
