--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:text="PokeGuess" />
 
         <ImageButton
@@ -55,13 +55,15 @@
             <ImageView
                 android:id="@+id/mainPageImage"
                 android:layout_width="216dp"
-                android:layout_height="216dp" />
+                android:layout_height="216dp"
+                android:src="@drawable/volcarona" />
 
             <TextView
                 android:id="@+id/mainPageImageName"
                 style="@style/DefaultTextStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="Volcarona"
                 android:gravity="center" />
         </LinearLayout>
 
@@ -122,7 +124,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp">
 
