--- a/app/src/main/res/layout/fragment_challenge.xml
+++ b/app/src/main/res/layout/fragment_challenge.xml
@@ -10,9 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:indeterminate="true"
-        android:indeterminateTint="@color/blue_volc"
-        android:layout_marginTop="16dp"
-        android:visibility="gone" />
+        android:indeterminateTint="@color/orange_volc"
+        android:layout_marginTop="64dp"/>
 
 
     <TextView
@@ -25,13 +24,15 @@
         android:text="@string/leaderboard_challenge_description" />
 
     <ScrollView
+        android:id="@+id/leaderboard_challenge_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/leaderboard_challenge_description"
         android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="16dp">
+        android:layout_marginBottom="16dp"
+        android:visibility="gone">
 
         <TableLayout
             android:id="@+id/leaderboard_challenge_table"
