--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -33,4 +33,17 @@
         <item name="android:fontFamily">@font/montseratt</item>
     </style>
 
+    <style name="CustomButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:textSize">20sp</item>
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingTop">4dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingBottom">4dp</item>
+        <item name="android:textAllCaps">false</item>
+        <item name="android:fontFamily">@font/montseratt</item>
+        <item name="android:stateListAnimator">@null</item>
+        <item name="android:background">@drawable/custom_button_background</item>
+    </style>
+
+
 </resources>
