--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,7 @@
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="32dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp">
 
@@ -164,12 +164,22 @@
             </LinearLayout>
 
             <TextView
+                android:id="@+id/version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/serverStatusTextLayout"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/gray_volc"
+                android:text="version number" />
+
+            <TextView
                 android:id="@+id/credits"
                 style="@style/Credits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentBottom="true"
                 android:text="@string/menu_page_credits" />
+
         </RelativeLayout>
 
     </RelativeLayout>
